# rust-evm-template

./: .env.example  Cargo.toml  README.md
src/abi/: mod.rs
src/utils/: constants.rs  dotenv.rs  mod.rs
