[package]
name = "rust_evm_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.11"
clippy = "0.0.302"
dotenv = "0.15.0"
ethers = "2.0.7"
eyre = "0.6.8"
hex = "0.4.3"
indoc = "2.0.2"
serde = "1.0.171"
serde_json = "1.0.102"
tokio = "1.29.1"
